--- a/css/scss/partials/_buttons.scss
+++ b/css/scss/partials/_buttons.scss
@@ -106,7 +106,9 @@
 	// Placement
 	position: absolute;
 	top: 60px;
-	right: 10px;
+	right: 50%;
+    margin-right: -75px;
+    z-index: 1000;
 	
 	 &:hover {
         border: 2px solid $uq-purple;
@@ -114,6 +116,43 @@
 		background-color: $uq-purple;
         transition: 0.4s;
 	}
+}
+
+.drawing-app-camera {
+    @extend .submit;
+    @extend .remove-button-style;
+
+    // Placement
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    z-index: 1000;
+    
+     &:hover {
+        border: 2px solid $uq-purple;
+        color: #FFF;
+        background-color: $uq-purple;
+        transition: 0.4s;
+    }
+}
+
+
+.drawing-app-clear {
+    @extend .submit;
+    @extend .remove-button-style;
+
+    // Placement
+    position: absolute;
+    top: 60px;
+    left: 10px;
+    z-index: 1000;
+    
+     &:hover {
+        border: 2px solid $uq-purple;
+        color: #FFF;
+        background-color: $uq-purple;
+        transition: 0.4s;
+    }
 }
 
 .drawing-app-back {
