--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ table {
   color: #410C54;
   font-weight: 600;
   font-size: 20px;
-  height: 42px;
+  height: 40px;
   border-radius: 15px;
   cursor: pointer;
 }
@@ -1343,28 +1343,29 @@ body {
 }
 /* line 69, scss/partials/_list.scss */
 .list-questions-green li {
-  margin-bottom: 10px;
-  height: 50px;
+  height: 25px;
   background: #8ED676;
   color: white;
   margin: 3px;
-  padding-top: 12px;
+  border-radius: 50px;
+  padding-top: 10px;
   transition: .3s;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 20px;
   padding-left: 20px;
 }
 /* line 83, scss/partials/_list.scss */
 .list-questions-green li button {
   float: right;
+  margin-top: -5px;
 }
 
-/* line 88, scss/partials/_list.scss */
+/* line 89, scss/partials/_list.scss */
 .student-list {
   width: 80%;
   margin: auto;
 }
-/* line 93, scss/partials/_list.scss */
+/* line 94, scss/partials/_list.scss */
 .student-list li {
   margin-bottom: 10px;
   height: 50px;
@@ -1379,76 +1380,106 @@ body {
   font-size: 30px;
   text-align: center;
 }
-/* line 107, scss/partials/_list.scss */
+/* line 108, scss/partials/_list.scss */
 .student-list li:hover {
   background: white;
   color: #8ED676;
   transition: 0.4s;
 }
-/* line 114, scss/partials/_list.scss */
+/* line 115, scss/partials/_list.scss */
 .student-list li button {
   float: right;
 }
 
-/* line 119, scss/partials/_list.scss */
+/* line 120, scss/partials/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-/* line 124, scss/partials/_list.scss */
+/* line 125, scss/partials/_list.scss */
 .list-questions ul, .list-questions-purple ul {
-  max-width: 400px;
+  max-width: 50%;
   margin: auto;
 }
-/* line 130, scss/partials/_list.scss */
+/* line 131, scss/partials/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 134, scss/partials/_list.scss */
+/* line 135, scss/partials/_list.scss */
 .list-questions ul li div, .list-questions-purple ul li div {
   color: white;
   height: 30px;
   margin: 3px;
+  border-radius: 50px;
   padding-top: 12px;
   transition: .3s;
   padding-left: 10px;
 }
-/* line 143, scss/partials/_list.scss */
+/* line 145, scss/partials/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-/* line 150, scss/partials/_list.scss */
+/* line 152, scss/partials/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 157, scss/partials/_list.scss */
+/* line 159, scss/partials/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
 }
+/* line 162, scss/partials/_list.scss */
+.list-questions button, .list-questions-purple button {
+  border-radius: 50px;
+  font-size: 16px;
+  transition: 0.4s;
+  outline-style: none;
+  cursor: pointer;
+  background: white;
+  margin-top: -5px;
+  height: 30px;
+  float: right;
+  font-size: 12px;
+  border: 2px solid #410C54;
+  color: #410C54;
+  width: 70px;
+}
+/* line 172, scss/partials/_list.scss */
+.list-questions button:hover, .list-questions-purple button:hover {
+  border: 2px solid #FFF;
+  color: #410C54;
+  transition: 0.4s;
+}
+/* line 182, scss/partials/_list.scss */
+.list-questions button:hover, .list-questions-purple button:hover {
+  border: 2px solid white;
+  background: #410C54;
+  color: white;
+  transition: 0.4s;
+}
 
-/* line 166, scss/partials/_list.scss */
+/* line 195, scss/partials/_list.scss */
 .list-questions-purple ul li div {
   background: #410C54;
 }
-/* line 170, scss/partials/_list.scss */
+/* line 199, scss/partials/_list.scss */
 .list-questions-purple ul li div:hover {
   background: #1e0627;
 }
 
-/* line 179, scss/partials/_list.scss */
+/* line 208, scss/partials/_list.scss */
 .grid-container {
   margin: 0 auto;
   width: 1200px;
   padding-top: 20px;
 }
 
-/* line 186, scss/partials/_list.scss */
+/* line 215, scss/partials/_list.scss */
 .grid-response {
   float: left;
   width: 110px;
