--- a/css/scss/partials/_list.scss
+++ b/css/scss/partials/_list.scss
@@ -67,21 +67,22 @@
 	
 	
 	li {
-		margin-bottom: 10px;
-		height: 50px;
+		height: 25px;
 		background: $uq-green;
 		color: white;
 		margin: 3px;
-		padding-top: 12px;
+		border-radius: 50px;
+		padding-top: 10px;
 		transition: .3s;
 		cursor: pointer;
 		@extend .noselect;
-		font-size: 30px;
+		font-size: 20px;
 		padding-left:20px;
 	}
 
 	li button {
 		float: right;
+		margin-top: -5px;
 	}
 }
 
@@ -122,7 +123,7 @@
 	width: 100%;
 
 	ul {
-		max-width: 400px;
+		max-width: 50%;
 		margin: auto;
 		
 	}
@@ -135,6 +136,7 @@
 		color: white;
 		height: 30px;
 		margin: 3px;
+		border-radius:50px;
 		padding-top: 12px;
 		transition: .3s;
 		padding-left: 10px;
@@ -156,6 +158,33 @@
 
 	label {
 		font-size: 20px;
+	}
+	button {
+		border-radius: 50px;
+		font-size: 16px;
+		transition: 0.4s;
+		outline-style: none;
+		cursor: pointer;
+		background:white;
+		margin-top:-5px;
+		height: 30px;
+
+		&:hover {
+			border: 2px solid #FFF;
+			color: $uq-purple;
+			transition: 0.4s;
+		}
+		float:right;
+		font-size: 12px;
+		border: 2px solid $uq-purple;
+		color: $uq-purple;
+		width: 70px;
+		&:hover {
+			border: 2px solid white;
+			background: $uq-purple;
+			color: white;
+			transition: 0.4s;
+		}
 	}
 
 }
