--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -3,7 +3,7 @@
 ** ******/
 
 .theme-lecture-mode {
-	background-image: url(../assets/images/lecture-mode-bg.png);
+	background-image: url(../assets/images/trialbgl.png);
 	background-repeat: no-repeat;
     background-size: cover;
 	height: calc(100vh - 163px);
@@ -22,7 +22,7 @@ a {
 }
 
 .theme-prepare-mode {
-	background-image: url(../assets/images/prepare-mode-bg.png);
+	background-image: url(../assets/images/trialbgp.png);
 	background-repeat: no-repeat;
     background-size: cover;
 	height: calc(100vh - 163px);
