--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ table {
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #528009;
-  width: 220px;
+  width: 40%;
   margin-right: 20px;
   outline: none;
 }
@@ -432,7 +432,7 @@ table {
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #810e05;
-  width: 220px;
+  width: 40%;
   margin-left: 20px;
   outline: none;
 }
